name:                Rwm
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rk
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable rwm
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , mtl
                     , X11
                     , lens
                     , unix
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction MonoLocalBinds UnicodeSyntax
  ghc-options:         -Wall -threaded -Wno-name-shadowing

